--- a/app/src/main/res/layout/item_reclamation.xml
+++ b/app/src/main/res/layout/item_reclamation.xml
@@ -1,17 +1,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="8dp"
     android:orientation="vertical"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView android:id="@+id/titleText"
-        android:textSize="18sp"
+    <TextView android:id="@+id/tvTitre"
         android:textStyle="bold"
+        android:textSize="18sp"
+        android:text="Titre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <TextView android:id="@+id/dateText"
-        android:textSize="14sp"
+    <TextView android:id="@+id/tvDescription"
+        android:text="Description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/tvDate"
+        android:text="Date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/tvStatut"
+        android:text="Statut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/tvLocalisation"
+        android:text="Localisation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/tvCategorie"
+        android:text="Catégorie"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView android:id="@+id/tvRegion"
+        android:text="Région"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
