--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,8 +22,16 @@
             android:title="FAQ" />
 
         <item
+            android:id="@+id/nav_reclamations"
+            android:icon="@drawable/baseline_analytics_24"
+            android:title="Réclamations" />
+
+
+        <item
             android:id="@+id/fragment2"
             android:icon="@drawable/baseline_add_box_24"
             android:title="Ajouter réclamation" />
+
+
     </group>
 </menu>
