--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="teal_700">#FF018786</color>
     <color name="purple_500">#CC75DB</color>
+    <color name="emerald_green">#1E8A78</color>
+    <color name="light_green">#E0F2F1</color>
 </resources>
