--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,13 @@
     <color name="white">#FFFFFFFF</color>
     <color name="teal_700">#FF018786</color>
     <color name="purple_500">#CC75DB</color>
+    <!-- Couleurs existantes -->
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+
+    <!-- Nouvelles couleurs pour le texte -->
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="colorAccentSecondary">#9C27B0</color>
 </resources>
