--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/placeholder_color">
 
     <ImageView
         android:id="@+id/photoImageView"
@@ -12,9 +13,10 @@
 
     <ProgressBar
         android:id="@+id/photoProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         android:layout_centerInParent="true"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:indeterminateDrawable="@drawable/loading_animation" />
 
 </RelativeLayout>
