--- a/app/src/main/res/layout/fragment_ajouter_rec.xml
+++ b/app/src/main/res/layout/fragment_ajouter_rec.xml
@@ -179,6 +179,15 @@
             android:visibility="gone"
             android:contentDescription="Aperçu de la photo" />
 
+        <!-- ProgressBar corrigé pour être initialement invisible -->
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:layout_marginBottom="16dp"/>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/submit_button"
             android:layout_width="match_parent"
@@ -187,7 +196,7 @@
             android:padding="12dp"
             android:textStyle="bold"
             app:cornerRadius="8dp"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="8dp"/>
 
     </LinearLayout>
 </ScrollView>
