--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,26 +5,31 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/fragment1"
-            android:icon="@drawable/baseline_announcement_24"
-            android:title="FAQ" />
-
-        <item
             android:id="@+id/nav_reclamations"
             android:icon="@drawable/baseline_analytics_24"
             android:title="Réclamations" />
 
-
+        <item
+            android:id="@+id/nav_mes_reclamations"
+            android:icon="@drawable/baseline_analytics_24"
+            android:title="Mes Réclamations" />
         <item
             android:id="@+id/fragment2"
             android:icon="@drawable/baseline_add_box_24"
             android:title="Ajouter réclamation" />
 
         <item
-            android:id="@+id/nav_mes_reclamations"
-            android:icon="@drawable/ic_launcher_background"
-            android:title="Mes Réclamations" />
-
-
+            android:id="@+id/fragment1"
+            android:icon="@drawable/baseline_announcement_24"
+            android:title="FAQ" />
     </group>
+
+    <item android:title="Compte">
+        <menu>
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@android:drawable/ic_menu_close_clear_cancel"
+                android:title="Déconnexion" />
+        </menu>
+    </item>
 </menu>
